<resources>
  <string name="app_name">LaSalle LAMP</string>
  <string name="company_placeholder">Your company 2.0</string>
  <string name="login_username_hint">Username</string>
  <string name="password_hint">Password</string>
  <string name="login">Login</string>
  <string name="remember_me">Remember Me</string>
  <string name="use_as_guest">Use as Guest</string>
  <string name="forgot_password">Forgot Password</string>
  <string name="guest_login_title">Use as Guest</string>
  <string name="continue_button">Continue</string>
  <string name="provide_email">Please provide your email address to use the app.</string>
  <string name="email_hint">Email</string>
  <string name="guest_user">Guest</string>
  <string name="guest_user_details">Guest Details</string>
  <string name="lasalle_solutions">LaSalle Solutions</string>
  <string-array name="guest_fields">
    <item>Serial Number</item>
    <item>Vendor</item>
    <item>Product Number</item>
    <item>Location</item>
    <item>Customer Asset Number</item>
  </string-array>
  <string name="provide_account_info">Please provide the account information.</string>
  <string name="hint_username">Username</string>
  <string name="submit_button">Submit</string>
  <string name="forgot_password_title">Forgot Password</string>
  <string name="forgot_password_error">Please enter username</string>
  <string name="forgot_password_success">The username was successfully submitted for password reset. Please check your email.</string>
  <string name="intro_title">Welcome to LAMP!</string>
  <string name="intro_description">Check out our new and improved features.</string>
  <string name="intro_search_title">Search LAMP</string>
  <string name="intro_search_description">Assets, contracts, tickets and more.</string>
  <string name="intro_lookup_title">LAMP Lookup</string>
  <string name="intro_lookup_description">Information on your Cisco serial numbers.</string>
  <string name="intro_scan_title">LAMP Scan</string>
  <string name="intro_scan_description">On and offline barcode scanning.</string>
  <string name="intro_notifications_title">Notifications</string>
  <string name="intro_notifications_description">Order status updates and more.</string>
  <string name="intro_account_title">Account</string>
  <string name="intro_account_description">View information from each of your lookupListItems.</string>
  <string name="got_it">Continue</string>
  <string name="search_hint">Search LAMP</string>
  <string name="search_filter_everything">All</string>
  <string name="search_filter_prefix">Search </string>
  <string name="scanning">Scanning…</string>
  <string name="no_barcode_detected_message">No barcode detected</string>
  <string name="dashboard_search_title">Search LAMP</string>
  <string name="dashboard_lookup_title">LAMP Lookup</string>
  <string name="dashboard_scan_title">LAMP Scan</string>
  <string name="dashboard_notifications_title">Notifications</string>
  <string name="dashboard_search_description">Detailed information on your assets, contracts and tickets.</string>
  <string name="dashboard_lookup_description">Information on your Cisco serial numbers.</string>
  <string name="dashboard_scan_description">Online and offline asset barcode scanning.</string>
  <string name="dashboard_notifications_description">Order status updates and more.</string>
  <string name="dashboard_title">LAMP Home</string>
  <string name="dashboard_system_message_title">SYSTEM MESSAGE:</string>
  <string name="dashboard_no_network_title">NO NETWORK CONNECTION:</string>
  <string name="dashboard_no_network_message">We are unable to connect to the LAMP servers. Some of the features of the app require a network connection. These will be restored with a connection.</string>
  <string name="dashboard_menu_my_account">My Account</string>
  <string name="dashboard_menu_change_customer">Change Customer</string>
  <string name="dashboard_menu_help">LAMP Help</string>
  <string name="dashboard_menu_about">About LAMP</string>
  <string name="dashboard_menu_third_party">3rd Party Libraries</string>
  <string name="dashboard_menu_intro">Introduction</string>
  <string name="dashboard_menu_logout">Logout</string>
  <string name="dashboard_menu_version">Version</string>
  <string name="assets">Assets</string>
  <string name="scan_set">Scan Set</string>
  <string name="sync_date">Sync Date</string>
  <string name="share_csv">Share as CSV</string>
  <string name="edit_scan_set">Edit Scan Set</string>
  <string name="scan_help">LAMP Scan Help</string>
  <string name="scan_background_text">Tap the button below to add assets to your scan set. Tap the actions icon to see all of your scan set options. Create scan sets to easily group, manage, and inventory your office, building, and organization.</string>
  <string name="scan_modified_date_prefix">Modified</string>
  <string name="scan_new_scan_set_dialog_title">Scan Set Name</string>
  <string name="scan_new_scan_set_dialog_message">Use a unique name to easily identify it later.</string>
  <string name="scan_new_scan_set_name_hint">Scan set name</string>
  <string name="rename_scan_set">Rename Scan Set</string>
  <string name="reorder_fields">Reorder Fields</string>
  <string name="scan_field">Scan Field</string>
  <string name="scan_field_required">Scan Field (*required field)</string>
  <string name="scan_field_value">Field Value</string>
  <string name="scan_new_scan_set_list_footer">Scan fields are input fields you\'ll be asked to fill in for each asset. You can update the values to carry forward from the first entry. You must use at least one field to create a scan set.</string>
  <string name="carry_forward_label">Carry Forward Values</string>
  <string name="carry_forward_description">If enabled, the value entered on the first asset will carry forward for all assets in the scan set.</string>
  <string name="show_field_label">Show Field in List View</string>
  <string name="show_field_description">If disabled, the label will be removed from the list of assets in your scan set. The field will still appear when entering assets.</string>
  <string name="select_fields">Select Fields</string>
  <string name="field_setting_suffix">Settings</string>
  <string name="scan_reorder_header">Set the input order for your scan fields</string>
  <string name="field_show">Show</string>
  <string name="field_hide">Hide</string>
  <string name="field_carry_forward">Carry Forward</string>
  <string name="field_always_ask">Always Ask</string>
  <string name="scan_confirm_delete_scan_set_message">Are you sure you want to delete this scan set?</string>
  <string name="scan_detail_background_text">Tap the button below to add assets to your scan set. Tap the actions icon to see all of your scan set options.</string>
  <string name="scan_sync_status_not_synced">Not Synced</string>
  <string name="duplicate_scan_set">Duplicate Scan Set</string>
  <string name="scan_sync">Sync</string>
  <string name="scan_set_duplicated_message_success">Scan Set was duplicated</string>
  <string name="scan_set_duplicated_message_failure">There was an error.</string>
  <string name="delete_asset_message">Are you sure you want to delete this asset?</string>
  <string name="menu_title_add_asset_field_via_camera">Add Asset Field Via Camera</string>
  <string name="menu_add_asset_continue">Continue</string>
  <string name="scan_set_add_asset_title">Add Asset</string>
  <string name="scan_add_asset_enter_hint">Enter…</string>
  <string name="scan_add_asset_select_hint">Select…</string>
  <string name="delete_scan_set_message">Are you sure you want to delete this set?</string>
  <string name="scan_set_asset_added">Asset Added!</string>
  <string name="scan_set_asset_updated">Updated Asset!</string>
  <string name="scan_set_asset_deleted">Asset deleted!</string>
  <string name="syncing">Syncing…</string>
  <string name="delete_asset">Delete</string>
  <string name="error_login_generic">There was an error. Please try again later.</string>
  <string name="error_login_username">Please enter a username</string>
  <string name="error_login_password">Please enter a password</string>
  <string name="error_login_null_or_empty_credentials">Please provide your login credentials.</string>
  <string name="error_guest_login_email">Please enter a valid email address</string>
  <string name="application_version_mismatch">Your application is not up to date. Please download the latest version.</string>
  <string name="device_date_out_of_sync">Your device date is not in sync with the server. \nServer time:</string>
  <string name="error_no_camera">Feature requires a camera</string>
  <string name="error_no_camera_available">The camera is not available</string>
  <string name="error_customer_details_generic">Unable to get customer details.</string>
  <string name="error_search_details">Unable to get details.</string>
  <string name="error_share">There was an error sharing this asset.</string>
  <string name="error_empty_scan_set_name">Cannot create a Scan Set with an empty name.</string>
  <string name="error_scan_set_csv_failure_message">There was an error creating csv file.</string>
  <string name="scan_set_need_field_message">At least one field is required to create a scan set. Please select a field.</string>
  <string name="scan_set_asset_field_missing">Field Missing</string>
  <string name="about">About LAMP</string>
  <string name="third_party_licenses">Third Party Libraries</string>
  <string name="asset_list_title">Asset List</string>
  <string name="asset_list_title_tickets">Tickets</string>
  <string name="asset_list_title_contracts">Contracts</string>
  <string name="blocking_message">BLOCKING MESSAGE</string>
  <string name="blocking_app_disabled">The Application is blocked until the specified action is taken.</string>
  <string name="error_no_network">Please connect to the Internet to proceed.</string>
  <string name="my_account_title">My Account</string>
  <string name="account_info">Account Info</string>
  <string name="customer">Customer</string>
  <string name="change">Change</string>
  <string name="name">Name</string>
  <string name="username">Username</string>
  <string name="email">Email</string>
  <string name="alert_button_text_dismiss">Dismiss</string>
  <string name="alert_dialog_cancel">Cancel</string>
  <string name="alert_dialog_ok">OK</string>
  <string name="analytics_login">Login</string>
  <string name="analytics_guest_login">Guest Login</string>
  <string name="analytics_forgot_password">Forgot Password</string>
  <string name="analytics_introduction">Introduction</string>
  <string name="analytics_blocking_message">Blocking Message</string>
  <string name="analytics_dashboard">Dashboard</string>
  <string name="analytics_my_account">My Account</string>
  <string name="analytics_about">About</string>
  <string name="analytics_third_party_libraries">Third Party Libraries</string>
  <string name="analytics_help">Help</string>
  <string name="analytics_change_customer">Change Customer</string>
  <string name="analytics_search">Search</string>
  <string name="analytics_lookup">Lookup</string>
  <string name="analytics_scan">Scan</string>
  <string name="analytics_notifications">Notifications</string>
  <string name="analytics_asset_detail">Asset Detail</string>
  <string name="analytics_asset_list">Asset List</string>
  <string name="analytics_action_click_new_scan_set">New scan set clicked</string>
  <string name="analytics_new_scan_set">New Scan Set</string>
  <string name="analytics_scan_detail">Scan Set Detail</string>
  <string name="analytics_scan_new_asset">New Asset</string>
  <string name="analytics_notifications_detail">Notifications Detail</string>
  <string name="analytics_camera">Camera</string>
  <string name="analytics_action_lookup_search">Lookup Search</string>
  <string name="analytics_action_search">Search</string>
  <string name="search_menu_title">Search</string>
</resources>