<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_edit_scan_sets"
        android:orderInCategory="0"
        android:title="@string/edit_scan_set"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_duplicate_scan_sets"
        android:orderInCategory="100"
        android:title="@string/duplicate_scan_set"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share_csv"
        android:orderInCategory="200"
        android:title="@string/share_csv"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_scan_sync"
        android:orderInCategory="300"
        android:title="@string/scan_sync"
        app:showAsAction="never"/>

</menu>