<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/login_lamp_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/login_lasalle_margin"
        android:layout_marginBottom="@dimen/login_lamp_margin"
        android:src="@drawable/lamp_white"/>

    <EditText
        android:id="@+id/login_username"
        style="@style/LoginEditText"
        android:layout_below="@id/login_lamp_logo"
        android:inputType="text"
        android:hint="@string/login_username_hint"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_below="@id/login_username"
        style="@style/LoginEditText"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>

    <CheckBox
        android:id="@+id/login_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        android:layout_below="@+id/login_password"
        android:layout_marginStart="@dimen/login_checkbox_margin"
        android:layout_marginTop="@dimen/default_small_margin"
        android:buttonTint="@color/white"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_password"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_selector_white"
        style="@style/Title2"
        android:background="@color/transparent"
        android:layout_alignBaseline="@+id/login_remember_me"
        android:onClick="login"/>

    <Button
        android:id="@+id/login_guest"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_guest_button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:background="@color/transparent"
        android:text="@string/use_as_guest"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_selector_white"
        style="@style/Title2"
        android:onClick="guestLogin"/>

    <View
        android:id="@+id/login_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/login_guest"
        android:background="@color/white"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"/>

    <ImageView
        android:id="@+id/login_lasalle_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_lasalle_margin"
        android:layout_marginStart="@dimen/login_lasalle_margin"
        android:layout_marginEnd="@dimen/login_lasalle_margin"
        android:src="@drawable/login_logo"
        android:layout_alignTop="@+id/login_button"
        android:layout_above="@+id/login_password_forgotten" />

    <Button
        android:id="@+id/login_password_forgotten"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_guest_button_height"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_separator"
        android:background="@color/transparent"
        android:textColor="@drawable/button_text_selector_white"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        style="@style/Title2"
        android:onClick="forgotPassword"/>

</RelativeLayout>