<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".login.ResetPasswordActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/reset_password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/reset_password_margin"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_below="@+id/reset_password_toolbar"
        android:textColor="@color/white"
        style="@style/Subheading2"
        android:text="@string/provide_account_info" />

    <EditText
        android:id="@+id/username"
        style="@style/LoginEditText"
        android:layout_below="@id/reset_password_header"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:inputType="text"
        android:hint="@string/hint_username"/>

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/username"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_selector_white"
        android:background="@color/transparent"
        style="@style/Title2"
        android:layout_marginTop="@dimen/default_small_margin"
        android:onClick="resetPassword"/>

    <include
        android:id="@+id/reset_password_toolbar"
        layout="@layout/default_toolbar"/>

    <include
        android:id="@+id/progressBar"
        layout="@layout/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
